[package]
name = "zksync_consensus_roles"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
links = "zksync_consensus_roles_proto"
description = "ZKsync consensus node role types"

[dependencies]
zksync_concurrency.workspace = true
zksync_consensus_crypto.workspace = true
zksync_consensus_utils.workspace = true
zksync_protobuf.workspace = true

anyhow.workspace = true
bit-vec.workspace = true
hex.workspace = true
prost.workspace = true
rand.workspace = true
serde.workspace = true
thiserror.workspace = true
tracing.workspace = true
num-bigint.workspace = true

[dev-dependencies]
assert_matches.workspace = true

[build-dependencies]
zksync_protobuf_build.workspace = true

[lints]
workspace = true
