[package]
name = "schema"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
bit-vec.workspace = true
serde.workspace = true
once_cell.workspace = true
quick-protobuf.workspace = true
prost.workspace = true
prost-reflect.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio.workspace = true

protobuf_utils = { path = "../protobuf/utils" }
concurrency = { path = "../concurrency" }

[build-dependencies]
anyhow.workspace = true
protobuf_build = { path = "../protobuf/build" }
protobuf_utils = { path = "../protobuf/utils" }
