[package]
name = "storage"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
rand.workspace = true
rocksdb = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true

protobuf.workspace = true
concurrency = { path = "../concurrency" }
roles = { path = "../roles" }
schema = { path = "../schema" }

[dev-dependencies]
assert_matches.workspace = true
tempfile.workspace = true
test-casing.workspace = true
tokio.workspace = true

[features]
default = []
# Enables RocksDB-based storage.
rocksdb = ["dep:rocksdb"]
