[package]
name = "zksync_consensus_storage"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[dependencies]
zksync_concurrency.workspace = true
zksync_consensus_roles.workspace = true
zksync_protobuf.workspace = true

anyhow.workspace = true
async-trait.workspace = true
prost.workspace = true
rand.workspace = true
rocksdb = { workspace = true, optional = true }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
assert_matches.workspace = true
tempfile.workspace = true
test-casing.workspace = true
tokio.workspace = true

[build-dependencies]
zksync_protobuf_build.workspace = true

[features]
default = []
# Enables RocksDB-based storage.
rocksdb = ["dep:rocksdb"]
