[package]
name = "zksync_consensus_utils"
version.workspace = true
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
description = "ZKsync consensus utilities"

[dependencies]
zksync_concurrency.workspace = true
rand.workspace = true
thiserror.workspace = true
anyhow.workspace = true

[lints]
workspace = true
