[package]
authors.workspace    = true
description          = "ZKsync consensus utilities"
edition.workspace    = true
homepage.workspace   = true
keywords.workspace   = true
license.workspace    = true
name                 = "zksync_consensus_utils"
repository.workspace = true
version.workspace    = true

[dependencies]
rand.workspace               = true
thiserror.workspace          = true
zksync_concurrency.workspace = true

[lints]
workspace = true
