[package]
name = "protobuf_utils"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
homepage.workspace = true
license.workspace = true

[[bin]]
name = "conformance_test"

[dependencies]
anyhow.workspace = true
bit-vec.workspace = true
serde.workspace = true
quick-protobuf.workspace = true
prost.workspace = true
prost-reflect.workspace = true
rand.workspace = true
serde_json.workspace = true
tokio.workspace = true
once_cell.workspace = true

protobuf_build = { path = "../build" }
concurrency = { path = "../../concurrency" }

[build-dependencies]
anyhow.workspace = true
protobuf_build = { path = "../build" }
